<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAtividadeUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtividadeFragment">

    <EditText
        android:id="@+id/etNomeAtividade"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/nome_atividade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spTipoAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIdAtivdade"
        android:layout_width="165dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/id_atividade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarAtividade"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etMETAtividade"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/met"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spTipoAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAtividade"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvMETAtividade"
        android:layout_width="312dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="19dp"
        android:hint="@string/met_desc"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etMETAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etMETAtividade"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAtividade" />

    <TextView
        android:id="@+id/tvTituloAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/minhas_atividades"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etIdAtivdade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Spinner
        android:id="@+id/spTipoAtividade"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginTop="244dp"
        android:layout_marginBottom="167dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/buscar"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/etNomeAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/etIdAtivdade"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:hint="@string/inserir"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvSaidaAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoAtividade" />

    <Button
        android:id="@+id/btnModificarAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/modificar"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toEndOf="@+id/btnInserirAtividade"
        app:layout_constraintTop_toBottomOf="@+id/etDescricaoAtividade" />

    <Button
        android:id="@+id/btnExcluirAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/excluir"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAtividade" />

    <Button
        android:id="@+id/btnListarAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/listar"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toEndOf="@+id/btnExcluirAtividade"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAtividade" />

    <EditText
        android:id="@+id/etDescricaoAtividade"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descricao"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoAtividade"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSaidaAtividade"
        android:layout_width="415dp"
        android:layout_height="127dp"
        android:layout_marginTop="96dp"
        android:textColorHint="@color/black"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAtividade" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etDescricaoAtividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoAtividade"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbCalisteniaAtividade"
            android:layout_width="188dp"
            android:layout_height="48dp"
            android:hint="@string/calistenia"
            android:textColorHint="@color/black" />

        <RadioButton
            android:id="@+id/rbAcademiaAtividade"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:hint="@string/exercicio_academia"
            android:textColorHint="@color/black" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>